force-app/main/default/objects/Docfab_FieldLabel_Configuration__c/Docfab_FieldLabel_Configuration__c.object-meta.xml
<CustomObject>
    <label>Docfab FieldLabel Configuration</label>
    <nameField>
        <label>Docfab_FieldLabelConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docfab FieldLabel Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>