force-app/main/default/objects/Docfab_FieldLabel_Configuration__c/fields/Docfab_Encoded_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Docfab_Encoded_Field_Label__c</fullName>
    <label>Docfab Encoded Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>