force-app/main/default/objects/Docfab_FieldLabel_Configuration__c/fields/Docfab_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Docfab_Field_API_Name__c</fullName>
    <label>Docfab Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>