force-app/main/default/objects/Docfab_FieldLabel_Configuration__c/fields/Parent_Model__c.field-meta.xml
<CustomField>
    <fullName>Parent_Model__c</fullName>
    <label>Parent Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>