force-app/main/default/objects/Docfab_FieldLabel_Configuration__c/fields/SF_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_Label__c</fullName>
    <label>SF Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>